--- a/pages/shorts.html
+++ b/pages/shorts.html
@@ -26,48 +26,42 @@
         <div class="productos">
             <div class="textos-alineados">
                 <div class="cajas">
-                    <img src="../assets/assets/short blanco.png" alt="Short 0kay_Bl" class="imagen-contendora"
-                        style="width: 215px;">
+                    <img src="../assets/assets/short blanco.png" alt="Short 0kay_Bl" class="imagen-contendora">
                 </div>
                 <h3>Short 0kay_Bl</h3>
                 <p>$99999</p>
             </div>
             <div class="textos-alineados">
                 <div class="cajas">
-                    <img src="../assets/assets/short verde.png" alt="Short Broken" class="imagen-contendora"
-                        style="width: 230px;">
+                    <img src="../assets/assets/short verde.png" alt="Short Broken" class="imagen-contendora">
                 </div>
                 <h3>Short Broken</h3>
                 <p>$99999</p>
             </div>
             <div class="textos-alineados">
                 <div class="cajas">
-                    <img src="../assets/assets/short grids.png" alt="Short Mon:90" class="imagen-contendora"
-                        style="width: 230px;">
+                    <img src="../assets/assets/short grids.png" alt="Short Mon:90" class="imagen-contendora">
                 </div>
                 <h3>Short Mon:90</h3>
                 <p>$99999</p>
             </div>
             <div class="textos-alineados">
                 <div class="cajas">
-                    <img src="../assets/assets/short logout.png" alt="Short Logout" class="imagen-contendora"
-                        style="width: 230px;">
+                    <img src="../assets/assets/short logout.png" alt="Short Logout" class="imagen-contendora">
                 </div>
                 <h3>Short Logout</h3>
                 <p>$99999</p>
             </div>
             <div class="textos-alineados">
                 <div class="cajas">
-                    <img src="../assets/assets/falda eclipse.png" alt="Falda Eclipse" class="imagen-contendora"
-                        style="width: 240px;">
+                    <img src="../assets/assets/falda eclipse.png" alt="Falda Eclipse" class="imagen-contendora">
                 </div>
                 <h3>Falda Eclipse</h3>
                 <p>$99999</p>
             </div>
             <div class="textos-alineados">
                 <div class="cajas">
-                    <img src="../assets/assets/ocean 2.png" alt="Short 0cean 2.0" class="imagen-contendora"
-                        style="width: 230px;">
+                    <img src="../assets/assets/ocean 2.png" alt="Short 0cean 2.0" class="imagen-contendora">
                 </div>
                 <h3>Short 0cean 2.0</h3>
                 <p>$99999</p>
