--- a/pages/FAQs.html
+++ b/pages/FAQs.html
@@ -1,7 +1,11 @@
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="description" content="Como comprar ropa. Cuando llega mi pedido.">
+<meta name="keywords" content="pedido, ropa, compra, correo">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Questrial&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="../css/stylesfaqs.css">
+<link rel="stylesheet" href="../css/styles.css">
 <title>FAQs</title>
 <header>
     <div class="contenedor">
@@ -35,9 +39,7 @@
         </b>
         <p>El paquete cuando no es recibido por parte del cliente retorna a nuestra oficina.
             <br>Luego, una vez que llega a nuestra oficina se realiza el reintegro del monto de las prendas abonadas,
-            descontandose el 80% del valor del envio.</p>
+            descontandose el 80% del valor del envio.
+        </p>
 </body>
 </div>
-<footer align="center">
-    <p>Copyright</p>
-</footer>
