--- a/pages/accesesorios.html
+++ b/pages/accesesorios.html
@@ -4,16 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Sitio web de Ropa original. Medias goticas. Carteras negras. Gorros goticos">
+    <meta name="keywords" content="Ropa, Vestimenta, Indumentaria, Gotico, Medias goticas, Cartera, Gorro de invierno">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Questrial&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../css/accesesorio.css">
+    <link rel="stylesheet" href="../css/styles.css">
     <title>Accesesorios</title>
 </head>
 
 <body>
     <header>
-        <div class="container">
+        <div class="container-4">
             <div class="flecha">
                 <a href="../index.html">
                     <img src="../assets/assets/flecha atras.png" alt="Atras" width="50px">
@@ -74,8 +76,4 @@
             </div>
         </div>
     </main>
-
-    <footer align="center">
-        <p>Copyright</p>
-    </footer>
 </body>
