--- a/pages/como-comprar.html
+++ b/pages/como-comprar.html
@@ -4,14 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Compra de ropa. Instructivo compra de ropa. Guia de como comprar en nuestro sitio web. Metodos de envios">
+    <meta name="keywords" content="Comprar ropa, envios">  
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Questrial&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../css/stylecomprar.css">
+    <link rel="stylesheet" href="../css/styles.css">
     <title>Como Comprar</title>
 </head>
 <header>
-    <div class="container">
+    <div class="container-1">
         <div class="flecha">
         <a href="../index.html">
             <img src="../assets/assets/flecha atras.png" alt="Atras" width="50px">
@@ -21,10 +23,8 @@
             ¿Como comprar?
         </h1>
     </div>
-
     <body>
         <div class="acomode-lista">
-
             <ol>
                 <li>Elegí el producto que querés, seleccionando el talle correspondiente. Si querés saber qué talle
                     sería el ideal para vos, podés revisar nuestra guía de talles.</li><br>
@@ -44,6 +44,3 @@
         </div>
     </body>
 </header>
-<footer align="center">
-    <p>Copyright</p>
-</footer>
