--- a/pages/shorts.html
+++ b/pages/shorts.html
@@ -4,19 +4,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Sitio de shorts. Shorts Goticos. Shorts Oversize. Shorts Enlighted">
+    <meta name="keywords" content="Ropa, Vestimenta, Indumentaria, Gotico, Shorts goticos, Shorts Oversize">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Questrial&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../css/shorts.css">
+    <link rel="stylesheet" href="../css/styles.css">
     <title>Shorts</title>
 </head>
 
 <body>
     <header>
-        <div class="container">
+        <div class="container-3">
             <div class="flecha">
                 <a href="../index.html">
-                    <img src="../assets/assets/flecha atras.png" alt="Atras" width="50px">
+                    <img src="../assets/assets/flecha atras.png" alt="Atras">
                 </a>
             </div>
             <h1 class="center">Shorts</h1->
@@ -68,9 +70,6 @@
             </div>
         </div>
     </main>
-    <footer align="center">
-        <p>Copyright</p>
-    </footer>
 </body>
 
 </html>
