--- a/pages/sobrenosotros.html
+++ b/pages/sobrenosotros.html
@@ -1,10 +1,16 @@
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="description" content="Local de ropa. Historia de marca Enlighted. Conocenos mas. Sobre nosotros">
+<meta name="keywords" content="Local, Local de ropa, Negocio ropa">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Questrial&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="../css/stylesnosotros.css">
+<link rel="stylesheet" href="../css/styles.css">
+
 <title>Sobre nosotros</title>
+
 <header>
-  <div class="contenedor">
+  <div class="contenedor-2">
     <a href="../index.html">
       <img src="../assets/assets/flecha atras.png" alt="Atras" width="50px">
     </a>
@@ -33,11 +39,8 @@
     <br>
     <div class="imagen-centrada">
       <a href="https://www.instagram.com/enlightedclothing/" target="_blank">
-        <img src="../assets/assets/iggg.png" alt="Instagram" style="width: 250px;">
+        <img class="instagram" src="../assets/assets/iggg.png" alt="Instagram">
       </a>
     </div>
 </body>
 </div>
-<footer align="center">
-  <p>Copyright</p>
-</footer>
