--- a/pages/como-comprar.html
+++ b/pages/como-comprar.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Compra de ropa. Instructivo compra de ropa. Guia de como comprar en nuestro sitio web. Metodos de envios">
-    <meta name="keywords" content="Comprar ropa, envios">  
+    <meta name="description"
+        content="Compra de ropa. Instructivo compra de ropa. Guia de como comprar en nuestro sitio web. Metodos de envios">
+    <meta name="keywords" content="Comprar ropa, envios">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Questrial&display=swap" rel="stylesheet">
@@ -14,15 +15,16 @@
 </head>
 <header>
     <div class="container-1">
-        <div class="flecha">
-        <a href="../index.html">
-            <img src="../assets/assets/flecha atras.png" alt="Atras" width="50px">
-        </a>
-    </div>
+        <div class="flecha" >
+            <a href="../index.html" class="">
+                <img src="../assets/assets/flecha atras.png" alt="Atras" width="50px" class="animate__animated animate__pulse">
+            </a>
+        </div>
         <h1 class="center">
             ¿Como comprar?
         </h1>
     </div>
+
     <body>
         <div class="acomode-lista">
             <ol>
