--- a/pages/sobrenosotros.html
+++ b/pages/sobrenosotros.html
@@ -1,6 +1,6 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="description" content="Local de ropa. Historia de marca Enlighted. Conocenos mas. Sobre nosotros">
+<meta name="description" content="Local de ropa. Historia de marca Enlighted. Conocenos mas. Sobre nosotros. Local ropa Buenos Aires">
 <meta name="keywords" content="Local, Local de ropa, Negocio ropa">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
