--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
                             <div class="offcanvas-body">
                                 <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                                     <li class="nav-item">
+                                        <a class="nav-link" href="index.html">Inicio</a>
+                                    </li>
+                                    <li class="nav-item">
                                         <a class="nav-link" href="pages/shorts.html">Shorts</a>
                                     </li>
                                     <li class="nav-item">
