--- a/pages/accesesorios.html
+++ b/pages/accesesorios.html
@@ -8,6 +8,8 @@
     <meta name="keywords" content="Ropa, Vestimenta, Indumentaria, Gotico, Medias goticas, Cartera, Gorro de invierno">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Questrial&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/styles.css">
     <title>Accesesorios</title>
@@ -15,13 +17,56 @@
 
 <body>
     <header>
-        <div class="container-4">
-            <div class="flecha">
-                <a href="../index.html">
-                    <img src="../assets/assets/flecha atras.png" alt="Atras" width="50px">
-                </a>
+        <nav>
+            <div class="header">
+                <nav class="navbar navbar-dark">
+                    <div class="container-fluid">
+                        <h1 class="accesorios">Accesesorios</h1>
+                        <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
+                            data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar"
+                            aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="offcanvas offcanvas-start text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar"
+                            aria-labelledby="offcanvasDarkNavbarLabel">
+                            <div class="offcanvas-header">
+                                <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Categorias</h5>
+                                <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas"
+                                    aria-label="Close"></button>
+                            </div>
+                            <div class="offcanvas-body">
+                                <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="../index.html">Inicio</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="shorts.html">Shorts</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="remeras.html">Remeras</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="accesesorios.html">Accesorios</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="FAQs.html">FAQs</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="sobrenosotros.html">Sobre Nosotros</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="como-comprar.html">Como comprar</a>
+                                    </li>
+                                </ul>
+                                </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </nav>
             </div>
-            <h1 class="center">Accesorios</h1->
+        </nav>
+        </div>
         </div>
     </header>
     <main>
@@ -76,4 +121,7 @@
             </div>
         </div>
     </main>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
