--- a/pages/como-comprar.html
+++ b/pages/como-comprar.html
@@ -10,39 +10,85 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Questrial&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Questrial&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/styles.css">
     <title>Como Comprar</title>
 </head>
 <header>
-    <div class="container-1">
-        <div class="flecha" >
-            <a href="../index.html" class="">
-                <img src="../assets/assets/flecha atras.png" alt="Atras" width="50px" class="animate__animated animate__pulse">
-            </a>
+        <nav>
+            <div class="header">
+                <nav class="navbar navbar-dark">
+                    <div class="container-fluid">
+                        <h1 class="como-comprar">Como comprar</h1>
+                        <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
+                            data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar"
+                            aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="offcanvas offcanvas-start text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar"
+                            aria-labelledby="offcanvasDarkNavbarLabel">
+                            <div class="offcanvas-header">
+                                <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Categorias</h5>
+                                <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas"
+                                    aria-label="Close"></button>
+                            </div>
+                            <div class="offcanvas-body">
+                                <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="../index.html">Inicio</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="shorts.html">Shorts</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="remeras.html">Remeras</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="accesesorios.html">Accesorios</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="FAQs.html">FAQs</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="sobrenosotros.html">Sobre Nosotros</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="como-comprar.html">Como comprar</a>
+                                    </li>
+                                </ul>
+                                </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </nav>
+            </div>
+        </nav>
         </div>
-        <h1 class="center">
-            ¿Como comprar?
-        </h1>
-    </div>
-
-    <body>
-        <div class="acomode-lista">
-            <ol>
-                <li>Elegí el producto que querés, seleccionando el talle correspondiente. Si querés saber qué talle
-                    sería el ideal para vos, podés revisar nuestra guía de talles.</li><br>
-                <li>Hacé click en el botón de "Comprar". Esto te llevará al mismo.</li><br>
-                <li>Completá tus datos de contacto y hacé click en "Continuar".</li><br>
-                <li>Ingresá la dirección a donde querés recibir tu compra. Luego hacé click en "Continuar".</li><br>
-                <li>Seleccioná el método de envío que te quede mejor y hacé click en "Continuar". Los envíos los
-                    realizamos por correo o mensajería privada.</li><br>
-                <li>Selecciona el método de pago.</li><br>
-                <li>Finalmente en la página de Confirmación de compra podés revisar toda la información de la compra.
-                    Luego hacé click en "Continuar".</li><br>
-                <li>Inmediatamente serás rederigido/a a otra pantalla para que completes los datos sobre la forma de
-                    pago elegida.</li><br>
-                <li>Una vez acreditado el pago, haremos el envío correspondiente de los productos que hayas comprado.
-                </li>
-            </ol>
-        </div>
-    </body>
 </header>
+
+<body>
+    <div class="acomode-lista">
+        <ul class="cuadro2">
+            <li>1. Elegí el producto que querés, seleccionando el talle correspondiente. Si querés saber qué talle
+                sería el ideal para vos, podés revisar nuestra guía de talles.</li><br>
+            <li>2. Hacé click en el botón de "Comprar". Esto te llevará al mismo.</li><br>
+            <li>3. Completá tus datos de contacto y hacé click en "Continuar".</li><br>
+            <li>4. Ingresá la dirección a donde querés recibir tu compra. Luego hacé click en "Continuar".</li><br>
+            <li>5. Seleccioná el método de envío que te quede mejor y hacé click en "Continuar". Los envíos los
+                realizamos por correo o mensajería privada.</li><br>
+            <li>6. Selecciona el método de pago.</li><br>
+            <li>7. Finalmente en la página de Confirmación de compra podés revisar toda la información de la compra.
+                Luego hacé click en "Continuar".</li><br>
+            <li>8. Inmediatamente serás rederigido/a a otra pantalla para que completes los datos sobre la forma de
+                pago elegida.</li><br>
+            <li>9. Una vez acreditado el pago, haremos el envío correspondiente de los productos que hayas comprado.
+            </li>
+        </ul>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+</body>
