--- a/pages/accesesorios.html
+++ b/pages/accesesorios.html
@@ -71,16 +71,16 @@
             <h1>Medias</h1>
             <div class="medias-cuadros">
                 <div>
-                    <img src="/assets/assets/medias (1).png" alt="Medias-1" style="width: 250px;">
+                    <img src="../assets/assets/medias (1).png" alt="Medias-1" style="width: 250px;">
                 </div>
                 <div>
-                    <img src="/assets/assets/mdiota (1).png" alt="Media-2" style="width: 250px;">
+                    <img src="../assets/assets/mdiota (1).png" alt="Media-2" style="width: 250px;">
                 </div>
                 <div>
-                    <img src="/assets/assets/medias cuadrille.png" alt="Media-3" style="width: 250px;">
+                    <img src="../assets/assets/medias cuadrille.png" alt="Media-3" style="width: 250px;">
                 </div>
                 <div>
-                    <img src="/assets/assets/mediasssss (1).png" alt="Media-4" style="width: 180px;">
+                    <img src="../assets/assets/mediasssss (1).png" alt="Media-4" style="width: 180px;">
                 </div>
             </div>
         </section>
@@ -88,32 +88,32 @@
             <h1>Gorros</h1>
             <div class="medias-cuadros">
                 <div>
-                    <img src="/assets/assets/gorra (1).png" alt="Gorra-1" style="width: 250px;">
+                    <img src="../assets/assets/gorra (1).png" alt="Gorra-1" style="width: 250px;">
                 </div>
                 <div>
-                    <img src="/assets/assets/gorro (1).png" alt="Gorro-2" style="width: 250px;">
+                    <img src="../assets/assets/gorro (1).png" alt="Gorro-2" style="width: 250px;">
                 </div>
                 <div>
-                    <img src="/assets/assets/gorraaa-removebg-preview (1).png" alt="Gorra-3" style="width: 250px;">
+                    <img src="../assets/assets/gorraaa-removebg-preview (1).png" alt="Gorra-3" style="width: 250px;">
                 </div>
                 <div>
-                    <img src="/assets/assets/gorroooo-removebg-preview.png" alt="Gorra-3" style="width: 250px;">
+                    <img src="../assets/assets/gorroooo-removebg-preview.png" alt="Gorra-3" style="width: 250px;">
                 </div>
         </section>
         <section class="derecha2">
             <h1>Gafas</h1>
             <div class="medias-cuadros">
                 <div>
-                    <img src="/assets/assets/gafaaas2-removebg-preview.png" alt="Gafas-1" style="width: 200px;">
+                    <img src="../assets/assets/gafaaas2-removebg-preview.png" alt="Gafas-1" style="width: 200px;">
                 </div>
                 <div>
-                    <img src="/assets/assets/gafas1-removebg-preview.png" alt="Gafas-2" style="width: 200px;">
+                    <img src="../assets/assets/gafas1-removebg-preview.png" alt="Gafas-2" style="width: 200px;">
                 </div>
                 <div>
-                    <img src="/assets/assets/gafas3-removebg-preview.png" alt="Gafas-3" style="width: 200px;">
+                    <img src="../assets/assets/gafas3-removebg-preview.png" alt="Gafas-3" style="width: 200px;">
                 </div>
                 <div>
-                    <img src="/assets/assets/gafones-removebg-preview.png" alt="Gafas-4" style="width: 200px;">
+                    <img src="../assets/assets/gafones-removebg-preview.png" alt="Gafas-4" style="width: 200px;">
                 </div>
         </section>
         <section class="garantia2">
