--- a/pages/sobrenosotros.html
+++ b/pages/sobrenosotros.html
@@ -70,15 +70,15 @@
     </div>
     <div class="ofrecimiento">
       <div class="cajas-ofrecimiento">
-        <img src="/assets/assets/mail-icon_8056408.png" alt="Mail-Icon">
+        <img src="../assets/assets/mail-icon_8056408.png" alt="Mail-Icon">
         <p>Contacto directo y rapido!</p>
       </div>
       <div class="cajas-ofrecimiento">
-        <img src="/assets/assets/globe_7192499.png" alt="Mundo-Icon">
+        <img src="../assets/assets/globe_7192499.png" alt="Mundo-Icon">
         <p>Envios a todo el mundo.</p>
       </div>
       <div class="cajas-ofrecimiento">
-        <img src="/assets/assets/padlock_3064155.png" alt="Candado-Icon">
+        <img src="../assets/assets/padlock_3064155.png" alt="Candado-Icon">
         <p>Seguridad maxima.</p>
       </div>
     </div>
@@ -89,7 +89,7 @@
         gusto. <br> Nuestro Instagram:
       </p>
       <a href="https://www.instagram.com/enlightedclothing/" target="_blank">
-        <img src="/assets/assets/iggg.png" alt="Instagram-icon" class="instagram-logo">
+        <img src="../assets/assets/iggg.png" alt="Instagram-icon" class="instagram-logo">
       </a>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
