--- a/pages/vestimenta.html
+++ b/pages/vestimenta.html
@@ -40,19 +40,19 @@
                                         <a class="nav-link" href="../index.html">Inicio</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="../vestimenta.html">Vestimenta</a>
+                                        <a class="nav-link" href="vestimenta.html">Vestimenta</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="../accesesorios.html">Accesorios</a>
+                                        <a class="nav-link" href="accesesorios.html">Accesorios</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="../FAQs.html">FAQs</a>
+                                        <a class="nav-link" href="FAQs.html">FAQs</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="../sobrenosotros.html">Sobre Nosotros</a>
+                                        <a class="nav-link" href="sobrenosotros.html">Sobre Nosotros</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="../como-comprar.html">Como comprar</a>
+                                        <a class="nav-link" href="como-comprar.html">Como comprar</a>
                                     </li>
                                 </ul>
                                 </li>
