--- a/index.html
+++ b/index.html
@@ -40,19 +40,19 @@
                                         <a class="nav-link" href="index.html">Inicio</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="pages/vestimenta.html">Vestimenta</a>
+                                        <a class="nav-link" href="./pages/vestimenta.html">Vestimenta</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="pages/accesesorios.html">Accesorios</a>
+                                        <a class="nav-link" href="./pages/accesesorios.html">Accesorios</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="pages/FAQs.html">FAQs</a>
+                                        <a class="nav-link" href="./pages/FAQs.html">FAQs</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="pages/sobrenosotros.html">Sobre Nosotros</a>
+                                        <a class="nav-link" href="./pages/sobrenosotros.html">Sobre Nosotros</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="pages/como-comprar.html">Como comprar</a>
+                                        <a class="nav-link" href="./pages/como-comprar.html">Como comprar</a>
                                     </li>
                                 </ul>
                                 </li>
@@ -69,16 +69,16 @@
                 <h1 class="h1-ultimo-drop">Ultimo Drop</h1>
                 <div class="flex-container">
                     <div>
-                        <img src="../assets/assets/eligfhted remera.png" alt="Remera Counting" style="width: 250px;">
+                        <img src="./assets/assets/eligfhted remera.png" alt="Remera Counting" style="width: 250px;">
                     </div>
                     <div>
-                        <img src="../assets/assets/buzovich.png" alt="Buzo Frecuencia" style="width: 250px;">
+                        <img src="./assets/assets/buzovich.png" alt="Buzo Frecuencia" style="width: 250px;">
                     </div>
                     <div>
-                        <img src="../assets/assets/yopuedo.png" alt="Remera <3M3_ng" style="width: 250px;">
+                        <img src="./assets/assets/yopuedo.png" alt="Remera <3M3_ng" style="width: 250px;">
                     </div>
                     <div>
-                        <img src="../assets/assets/corazon.webp" alt="Remera Love" style="width: 250px;">
+                        <img src="./assets/assets/corazon.webp" alt="Remera Love" style="width: 250px;">
                     </div>
                 </div>
             </section>
@@ -87,11 +87,11 @@
                     <h2 class="h2-mas-vendidos"> Mas Vendidos</h2>
                     <div class="container-2">
                         <div>
-                            <img src="../assets/assets/remer_englithed-removebg.png" alt="Vestimenta delante"
+                            <img src="./assets/assets/remer_englithed-removebg.png" alt="Vestimenta delante"
                                 style="width: 418px;">
                         </div>
                         <div>
-                            <img src="../assets/assets/atrasss-Photoroom-Photoroom.png" alt="Vestimenta detras"
+                            <img src="./assets/assets/atrasss-Photoroom-Photoroom.png" alt="Vestimenta detras"
                                 style="width: 420px;">
                         </div>
                     </div>
